test/visibility/import/enablesUnqualified/multipleUnqualified/allButOne-function-error2.good
allButOne-function-error2.chpl:26: In function 'main':
allButOne-function-error2.chpl:27: error: 'A' undeclared (first use this function)
